# MemOS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
memos/: __init__.py
memos/api/: __init__.py  models.py  server.py
memos/cli/: __init__.py  main.py  shell_integration.py
memos/connectors/: __init__.py  clipboard_watcher.py  file_watcher.py
memos/core/: __init__.py  base.py  config.py  embeddings.py  knowledge_graph.py  lancedb_backend.py  memory_engine.py  zvec_backend.py
memos/mcp_server/: __init__.py  server.py
