[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memos"
version = "0.1.0"
description = "MemOS — The Universal Local Context Daemon. A shared memory and knowledge layer for all your AI tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "MemOS Contributors" },
]
keywords = ["ai", "memory", "vector-database", "knowledge-graph", "mcp", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core — Embeddings (Fallback for Windows)
    "sentence-transformers>=3.0.0",

    # Core — Vector Database (Universal fallback)
    "lancedb>=0.9.0",
    "pyarrow>=17.0.0",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # CLI — Git-like interface with beautiful output
    "typer[all]>=0.12.0",
    "rich>=13.0.0",

    # MCP Server (Model Context Protocol)
    "mcp[cli]>=1.0.0",

    # Connectors
    "watchdog>=4.0.0",
    "pyperclip>=1.9.0",

    # Utilities
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
zvec = [
    "zvec>=0.2.0",
]

[project.scripts]
memos = "memos.cli.main:main"

[project.urls]
Homepage = "https://github.com/memos-ai/memos"
Documentation = "https://memos.dev/docs"
Repository = "https://github.com/memos-ai/memos"

[tool.hatch.build.targets.wheel]
packages = ["memos"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
